# Tagline-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  PLAN.md  README.md  STATUS.md  alembic.ini  docker-compose.yml  generate_api_key.py  pyproject.toml  requirements-dev.txt  requirements.txt  tagline-dropbox-bootstrap.py
.github/workflows/: checks.yml  ci.yml  e2e-tests.yml  pre-commit.yml  unit-tests.yml
alembic/: env.py
alembic/versions/: 593645151263_initial_schema.py  ff492cd1dc06_add_width_and_height_columns_to_photo.py
app/: auth_service.py  config.py  db.py  deps.py  main.py  models.py  redis_token_store.py  schemas.py
app/crud/: photo.py  refresh_token.py
app/db/: session.py
app/routes/: auth.py  root.py
app/storage/: __init__.py  dropbox.py  filesystem.py  memory.py  null.py  provider.py
docs/: FAQ.md  alembic-workflow.md  api_auth.md  database_setup.md
docs/adr/: 0001-use-pydantic-settings.md  0002-sync-sqlalchemy-for-mvp.md  0003-store-sqlite-db-on-docker-volume.md  0004-redis-token-store.md  0005-dropbox-sdk-vs-http.md  0006-refresh-token-flow.md
tagline_backend_app/: .env.example  auth_service.py  caching.py  config.py  constants.py  db.py  deps.py  logging_config.py  main.py  models.py  redis_token_store.py  schemas.py  token_store.py
tagline_backend_app/crud/: photo.py
tagline_backend_app/db/: session.py
tagline_backend_app/routes/: auth.py  health.py  photos.py  rescan.py  root.py  scan.py
tagline_backend_app/storage/: dropbox.py  filesystem.py  provider.py
tests/: README.md  conftest.py  test_000_pytest_is_working.py  test_config.py  test_db.py  test_models.py
tests/api/: test_login.py
tests/crud/: test_photo.py  test_refresh_token.py
tests/e2e/: auth_utils.py  conftest.py  test_auth_login.py  test_get_photo_image_e2e.py  test_login_e2e.py  test_patch_photo_metadata_e2e.py  test_photos.py  test_photos_e2e.py  test_photos_list_e2e.py  test_refresh_e2e.py  test_rescan.py  test_root_e2e.py  test_scan.py  test_smoke.py
(+43 files in other folders)
